# unabara

./: .gitignore  CLAUDE.md  CMakeLists.txt  CNAME  DONOTCOMMIT-Claude-ideas.md  DRAG_DROP_OVERLAY_PLAN.md  FLATHUB_SUBMISSION_WORKFLOW.md  PHASE5_IMPLEMENTATION.md  README.md  VERSION  resources.qrc  unabara-prd.md  version.h.in
.github/workflows/: build_releases.yml  cmake-linux.yml  cmake-multi-platform.yml  cmake-windows.yml
docs/: CNAME  index.html  style.css  video_export_design.md
include/core/: cell_data.h  config.h  dive_data.h  log_parser.h  overlay_template.h  units.h  update_checker.h  video_overlay_layout.h
include/core/format_parsers/: fit_decoder.h  fit_parser.h  idive_log_format_parser.h  parse_utils.h  subsurface_parser.h  uddf_parser.h
include/export/: image_export.h  video_export.h
include/generators/: frame_cache.h  i_frame_generator.h  overlay_gen.h  overlay_image_provider.h  profile_gen.h  profile_image_provider.h  profile_renderer.h  template_undo_stack.h
include/ui/: cell_model.h  main_window.h  timeline.h
resources/: org.unabara.unabara.desktop  org.unabara.unabara.metainfo.xml  unabara.rc
resources/All Shearwater Computers v3/: Black Perdix.toptrn  Black Teric.toptrn  Blue Perigrine.toptrn  Blue Teric.toptrn  Bronze Perdix.toptrn  Bronze Teric.toptrn  Dark Perigrine.toptrn  Dominic's Perdix.toptrn  Eric's Petrel with Temp.toptrn  Eric's Petrel.toptrn  Format Shearwater.xlsm  NERD Backup.toptrn  NERD Primary.toptrn  Peregrine TX.toptrn  Perigrine Dark.toptrn  Perigrine Light.toptrn  Perigrine TX Light.toptrn  Petrel.toptrn  Tern Big.toptrn  Tern Standard.toptrn  Titanium Perdix.toptrn  Titanium Teric.toptrn
resources/DC_BG/: Garmin_descent-x50i.xcf  Scubapro_G2_Front.xcf
resources/images/: Petrel_Titanium.xcf  unabara.icns
resources/templates/: CCR_Nerd_Right.utp  CCR_Petrel_Titanium.utp  CCR_Tek_Rugged.utp  CCR_Tek_Rugged2.utp  CCR_Tek_Rugged_Less_Labels.utp  OC_Rec_1Tank_Ocean.utp  OC_Rec_1Tank_Titanium.utp  OC_Rec_NoTanks_Ocean.utp  OC_Rec_NoTanks_Ocean2.utp  OC_Rec_NoTanks_Titanium.utp  OC_Tek_All_Data_4Tanks.utp  OC_Tek_All_Data_AllTanks.utp  Perdix_Black.utp  Perdix_Black_big.utp  TEST.utp  test_no_tanks.utp  test_save_template.utp
rnd/: Ideas.md
rnd/overlay_definitions/: overlay_definition_specification.json
src/: main.cpp
src/core/: cell_data.cpp  config.cpp  dive_data.cpp  log_parser.cpp  overlay_template.cpp  units.cpp  update_checker.cpp
src/core/format_parsers/: fit_decoder.cpp  fit_parser.cpp  parse_utils.cpp  subsurface_parser.cpp  uddf_parser.cpp
src/export/: image_export.cpp  video_export.cpp
src/generators/: frame_cache.cpp  overlay_gen.cpp  overlay_image_provider.cpp  profile_gen.cpp  profile_image_provider.cpp  profile_renderer.cpp  template_undo_stack.cpp
src/ui/: cell_model.cpp  main_window.cpp  timeline.cpp
src/ui/qml/: InteractiveOverlayPreview.qml  OverlayCell.qml  OverlayEditor.qml  ProfileEditor.qml  TimelineView.qml  VideoOverlayItem.qml  VideoSyncPlayer.qml  main.qml
tests/: SMOKE_TEST.md  make_synth_fit.py
tests/data/: 2026-02-28-Monastery_Beach.ssrf  CCR-MayanBlue.ssrf  CCR-NohochNahChich.ssrf  CCR-breakwater.ssrf  CCR_Dahab_Mas_Rhabat.ssrf  CCR_Halcyon_Benoit.ssrf  CCR_Halcyon_Benoit_cleaned.ssrf  Galileo_G2-TEK_SM_DecoO2-cleaned.ssrf  Galileo_G2-TEK_SM_DecoO2.ssrf  OC_ScubaproG2_Benoit.ssrf  blue_hole.bak  blue_hole.ssrf  peak_sac.ssrf  plongee_garmin.ssrf  plongee_garmin_extract.ssrf  test_multidive.ssrf  test_unabara.ssrf
